[gd_scene load_steps=3 format=3 uid="uid://crce5nrry2wp0"]

[ext_resource type="Theme" uid="uid://8kbukp78eoe6" path="res://Menu/main_menu.tres" id="1_4qruw"]
[ext_resource type="Script" uid="uid://dm8didpya51eu" path="res://Player/ui.gd" id="2_bxrt6"]

[node name="UI" type="Control" groups=["game_ui"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4qruw")
script = ExtResource("2_bxrt6")

[node name="InGame" type="MarginContainer" parent="."]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthLabel" type="Label" parent="InGame"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "IIIIIIIIII"

[node name="AmmoLabel" type="Label" parent="InGame"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "10/10"

[node name="CenterContainer" type="CenterContainer" parent="InGame"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="InGame/CenterContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Mouse Sensitivity:"

[node name="HSlider" type="HSlider" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
value = 5.0
scrollable = false
tick_count = 100
ticks_on_borders = true

[node name="Label2" type="Label" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -80.0
max_value = 0.0
value = -10.0
scrollable = false
tick_count = 80
ticks_on_borders = true

[connection signal="pressed" from="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
